vlib/v/checker/tests/infix_err.out
vlib/v/checker/tests/infix_err.vv:9:5: error: mismatched types `string` and `?string`
    7 | }
    8 | 
    9 | _ = '' + f()
      |     ~~~~~~~~
   10 | _ = f() + ''
   11 | _ = f() + f()
vlib/v/checker/tests/infix_err.vv:9:10: error: unwrapped Option cannot be used in an infix expression
    7 | }
    8 | 
    9 | _ = '' + f()
      |          ~~~
   10 | _ = f() + ''
   11 | _ = f() + f()
vlib/v/checker/tests/infix_err.vv:10:5: error: mismatched types `?string` and `string`
    8 | 
    9 | _ = '' + f()
   10 | _ = f() + ''
      |     ~~~~~~~~
   11 | _ = f() + f()
   12 |
vlib/v/checker/tests/infix_err.vv:10:5: error: unwrapped Option cannot be used in an infix expression
    8 | 
    9 | _ = '' + f()
   10 | _ = f() + ''
      |     ~~~
   11 | _ = f() + f()
   12 |
vlib/v/checker/tests/infix_err.vv:11:9: error: `+` cannot be used with `?string`
    9 | _ = '' + f()
   10 | _ = f() + ''
   11 | _ = f() + f()
      |         ^
   12 | 
   13 | _ = 4 + g()
vlib/v/checker/tests/infix_err.vv:11:5: error: unwrapped Option cannot be used in an infix expression
    9 | _ = '' + f()
   10 | _ = f() + ''
   11 | _ = f() + f()
      |     ~~~
   12 | 
   13 | _ = 4 + g()
vlib/v/checker/tests/infix_err.vv:13:7: error: `+` cannot be used with `?int`
   11 | _ = f() + f()
   12 | 
   13 | _ = 4 + g()
      |       ^
   14 | _ = int(0) + g()
   15 | _ = g() + int(3)
vlib/v/checker/tests/infix_err.vv:13:9: error: unwrapped Option cannot be used in an infix expression
   11 | _ = f() + f()
   12 | 
   13 | _ = 4 + g()
      |         ~~~
   14 | _ = int(0) + g()
   15 | _ = g() + int(3)
vlib/v/checker/tests/infix_err.vv:14:14: error: unwrapped Option cannot be used in an infix expression
   12 | 
   13 | _ = 4 + g()
   14 | _ = int(0) + g()
      |              ~~~
   15 | _ = g() + int(3)
   16 | _ = g() + 3
vlib/v/checker/tests/infix_err.vv:15:9: error: `+` cannot be used with `?int`
   13 | _ = 4 + g()
   14 | _ = int(0) + g()
   15 | _ = g() + int(3)
      |         ^
   16 | _ = g() + 3
   17 |
vlib/v/checker/tests/infix_err.vv:15:5: error: unwrapped Option cannot be used in an infix expression
   13 | _ = 4 + g()
   14 | _ = int(0) + g()
   15 | _ = g() + int(3)
      |     ~~~
   16 | _ = g() + 3
   17 |
vlib/v/checker/tests/infix_err.vv:16:9: error: `+` cannot be used with `?int`
   14 | _ = int(0) + g()
   15 | _ = g() + int(3)
   16 | _ = g() + 3
      |         ^
   17 | 
   18 | // binary operands
vlib/v/checker/tests/infix_err.vv:16:5: error: unwrapped Option cannot be used in an infix expression
   14 | _ = int(0) + g()
   15 | _ = g() + int(3)
   16 | _ = g() + 3
      |     ~~~
   17 | 
   18 | // binary operands
vlib/v/checker/tests/infix_err.vv:19:5: error: left operand for `&&` is not a boolean
   17 | 
   18 | // binary operands
   19 | _ = 1 && 2
      |     ^
   20 | _ = true || 2
   21 |
vlib/v/checker/tests/infix_err.vv:19:10: error: right operand for `&&` is not a boolean
   17 | 
   18 | // binary operands
   19 | _ = 1 && 2
      |          ^
   20 | _ = true || 2
   21 |
vlib/v/checker/tests/infix_err.vv:20:13: error: right operand for `||` is not a boolean
   18 | // binary operands
   19 | _ = 1 && 2
   20 | _ = true || 2
      |             ^
   21 | 
   22 | // boolean expressions
vlib/v/checker/tests/infix_err.vv:20:5: error: infix expr: cannot use `int literal` (right expression) as `bool`
   18 | // binary operands
   19 | _ = 1 && 2
   20 | _ = true || 2
      |     ~~~~~~~~~
   21 | 
   22 | // boolean expressions
vlib/v/checker/tests/infix_err.vv:23:22: error: ambiguous boolean expression. use `()` to ensure correct order of operations
   21 | 
   22 | // boolean expressions
   23 | _ = 1 == 1 && 2 == 2 || 3 == 3
      |                      ~~
   24 | _ = 1 == 1 && 2 == 2 || 3 == 3 && 4 == 4
   25 | _ = 1 + println('')
vlib/v/checker/tests/infix_err.vv:24:22: error: ambiguous boolean expression. use `()` to ensure correct order of operations
   22 | // boolean expressions
   23 | _ = 1 == 1 && 2 == 2 || 3 == 3
   24 | _ = 1 == 1 && 2 == 2 || 3 == 3 && 4 == 4
      |                      ~~
   25 | _ = 1 + println('')
vlib/v/checker/tests/infix_err.vv:25:5: error: mismatched types `int literal` and `void`
   23 | _ = 1 == 1 && 2 == 2 || 3 == 3
   24 | _ = 1 == 1 && 2 == 2 || 3 == 3 && 4 == 4
   25 | _ = 1 + println('')
      |     ~~~~~~~~~~~~~~~
